Remove legacy JSON and HTML report formats
Co-authored-by: Marco Geweke <marco.geweke@otto.de>